added centos server

--- a/playbooks/uninstall_apache.yaml
+++ b/playbooks/uninstall_apache.yaml
@@ -8,8 +8,11 @@
     apt: 
       name: apache2
       state: absent
+    when: ansible_distribution in ["Debian","Ubuntu"]
+
 
   - name: remove php support for apache
     apt:
       name: libapache2-mod-php
       state: absent
+    when: ansible_distribution in ["Debian","Ubuntu"]
