--- a/playbooks/uninstall_apache.yaml
+++ b/playbooks/uninstall_apache.yaml
@@ -4,15 +4,9 @@
   become: true
   tasks: 
 
-  - name: uninstall apache2 package
-    apt: 
-      name: apache2
+  - name: Uninstall Apache and PHP 
+    package: 
+      name: 
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: absent
-    when: ansible_distribution in ["Debian","Ubuntu"]
-
-
-  - name: remove php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: absent
-    when: ansible_distribution in ["Debian","Ubuntu"]
